Fix jumping on change tabs

--- a/frontend/src/components/events/events.css
+++ b/frontend/src/components/events/events.css
@@ -145,12 +145,12 @@ body:hover {
 }
 
 .event-image-box {
-    width: 96%;
+    width: 45vw;
     padding: 1vw 1vw 0 1vw;
 }
 
 .event-image {
-    width: 100%;
+    width: 45vw;
     max-height: 30vh;
     object-fit: cover;
 }
